[package]
name = "directiva-handler"
version = "0.1.0"
edition = "2021"

[dependencies]
redis = { version = "0.29.1", features = ["json"] }
actix-web = "4.9.0"
actix-cors = "0.7.0"
actix-web-lab = "0.22"
juniper = "0.16.1"
envconfig = "0.11.0"
dotenv = "0.15.0"
serde = "1.0.218"
serde_json = "1.0.1"
env_logger = "0.11.6"
chrono = { version = "0.4", features = ["serde"] }

deadpool-postgres = { version = "0.10", features = ["rt_tokio_1"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-0_8", "with-serde_json-1"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-pg-mapper = "0.2"
tokio-pg-mapper-derive = "0.2"