[package]
name = "directiva-handler"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7.0"
juniper = "0.16.1"
juniper_actix = "0.6.0"
r2d2 = "0.8.10"
redis = { version = "0.26.0", features = ["r2d2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
env_logger = "0.11.3"
envconfig = "0.10.0"
sha2 = "0.10.8"
regex = "1.11.1"
chrono = { version = "0.4.41", features = ["serde"] }
